# cp-algorithms

./: 2d-segtree.hpp  CMakeLists.txt  a.out  test-2d-segtree.cpp  test.sh
src/: convex-hull.hpp  matrix.hpp  sparse-table.hpp  string-trie.hpp  treap.h  z-function.hpp
tests/: README.md  test_SparseTable.cpp
